--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,10 +1,12 @@
-.!DOCTYPE html
+
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Down Under Fitness</h1>
-		<p>Your leading health menoturs for BodyBuilding Contest Prep in Australia</p>
+		<h1>Down Under Fitness Consultants</h1>
+		<h2>Your leading health menoturs for BodyBuilding Contest Prep in Australia.</h2>
+		<p>There are three natural bodybuilding federations in Australia: ANB, INBA and WNBF. In each case the ‘N’ in their name stands for 'Natural', and they aim to run drug free bodybuilding competitions.  We are your prime online and face-to-face coaching service for both male and females in all weight classes.</p>
+
 	</body>
 </html>
