--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
-	<body>
-		<h1>Down Under Fitness Consultants</h1>
-
-		<hr>
-
-		<h2>Your leading health menoturs for BodyBuilding Contest Prep in Australia.</h2>
-
-		<h3>Train like an Athlete, Eat like a Nutritionalist!</h3>
-
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Down Under Fitness Consultants</title>
+</head>
+<body>
+	<header>
+		<p class="logo">Down Under Fitness Consultants</p>
+		<nav>
+			<a href="#">link 1</a>
+			<a href="#">link 2</a>
+			<a href="#">link 3</a>
+			<a href="#">link 4</a>
+		</nav>
+	</header>
+	<section id="intro">
+		<h1>Your leading health menoturs for BodyBuilding Contest Prep in Australia.</h1>
+		<h2>Train like an Athlete, Eat like a Nutritionalist!</h2>
+	</section>
+	<section>
 		<img src="images/hero.jpg" alt="About Us" title="Australia's Top Bodybuilding Consultants">
-		
-		  <p>There are three natural bodybuilding federations in Australia: ANB, INBA and WNBF. In each case the ‘N’ in their name stands for 'Natural', and they aim to run drug free bodybuilding competitions.  We are your prime online and face-to-face coaching service for both male and females in all weight classes.</p>
-
-		  <hr>
-
-		  <h4>Our Pre Show Body Revot Process:</h4>
-		  <p id="4points">Sign Up - Goals - Customise - Checkin</p>
-
-		  <hr>
-
-		  <h5>Our Services:</h5>
-		  <ul>
-		  		<li>Online Training plans, Nutritional plans and Supplement guides all customized and tailor made to your individual 	backgrounds and desired goals</li>
-				<li>12 week Online “Body Revolt” packages</li>
-				<li>Full day Muscle Training Camps with small numbers of people in a group training environment</li>
-				<li>Preparation for Bodybuilding shows including all training, nutritional plans and supplement guides</li>
-				<li>Posing for Bodybuilding shows and Fitness Model Posing</li>
-				<li>One on one Personal Training sessions</li>
-				<li>Couples Fitness Training and Couples Personal Training</li>
-		  </ul>	
-
-		  <h5>On Site Events:</h5>
-		  	<p>This full day group training experience will provide you with new training techniques for each major muscle group.</p>
-
-			<p>Group numbers are limited in size to 12 participants maximum with myself and one other trainer for the group.  Each participant will get to train 2-3 sessions through the day and watch the other participants perform the other sessions.</p>
-
-
-		  <p>For more information regarding your program, please contact:<br>
-		  <a href="dufc@live.com.au">dufc@live.com.au</a></p>
-
-			<hr>
-
-			
-
-	</body>
+		<p>There are three natural bodybuilding federations in Australia: ANB, INBA and WNBF. In each case the ‘N’ in their name stands for 'Natural', and they aim to run drug free bodybuilding competitions.  We are your prime online and face-to-face coaching service for both male and females in all weight classes.</p>
+	</section>
+	<section id="process">
+		<h2>Our Pre Show Body Revot Process:</h2>
+		<ul id="4points">
+			<li>Sign Up</li>
+			<li>Goals</li>
+			<li>Customise</li>
+			<li>Checkin</li>
+		</ul>
+	</section>
+	<section id="services">
+		<h2>Our Services:</h2>
+		<ul>
+			<li>Online Training plans, Nutritional plans and Supplement guides all customized and tailor made to your individual 	backgrounds and desired goals</li>
+			<li>12 week Online “Body Revolt” packages</li>
+			<li>Full day Muscle Training Camps with small numbers of people in a group training environment</li>
+			<li>Preparation for Bodybuilding shows including all training, nutritional plans and supplement guides</li>
+			<li>Posing for Bodybuilding shows and Fitness Model Posing</li>
+			<li>One on one Personal Training sessions</li>
+			<li>Couples Fitness Training and Couples Personal Training</li>
+		</ul>	
+	</section>
+	<section id="events">
+		<h2>On Site Events:</h2>
+		<p>This full day group training experience will provide you with new training techniques for each major muscle group.</p>
+		<p>Group numbers are limited in size to 12 participants maximum with myself and one other trainer for the group.  Each participant will get to train 2-3 sessions through the day and watch the other participants perform the other sessions.</p>
+	</section>
+	<section id="contact">
+		<p>For more information regarding your program, please contact:<br>
+		<a href="dufc@live.com.au">dufc@live.com.au</a></p>
+	</section>
+</body>
 </html>
