--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -24,11 +24,11 @@
 	</header>
 
 	<section id="gifts">
-		<p><span>Need Help?</span> Customer Support 1-866-236-8417</p>
-		<p>Free Gift With Bookings This Week!</p>
+		<p><left>Need Help? Customer Support 1-866-236-8417</left></p>
+		<p><center>Free Gift With Bookings This Week!</center></p>
 	</section>
 
-	<section id="intro">
+	<section>
 		<img id="hero" src="images/hero.jpg" alt="About Us" title="Australia's Top Bodybuilding Consultants">
 		<p>There are three natural bodybuilding federations in Australia: ANB, INBA and WNBF. In each case the ‘N’ in their name stands for 'Natural', and they aim to run drug free bodybuilding competitions.  We are your prime online and face-to-face coaching service for both male and females in all weight classes.</p>
 	</section>
@@ -96,9 +96,7 @@
 	<hr>
 <footer>
 <!--Footerline-->
-	<div>
-
-	<figure class="help">
+	<div class="help"></div>
 
 		<p>NEED HELP?</p>
 		<ul>
@@ -109,22 +107,17 @@
 	<p>Send Us Feedback</p>
 		</ul>
 
-		</figure>
 
-
-	<figure class="social">
+	<div class="social"></div>
 
 		<p>CONNECT WITH US</p>
 	<p><a target="_blank" title="find us on Facebook" href="http://www.facebook.com/PLACEHOLDER"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_40x40.png" border=0></a></p>
 	<p><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_40x40.png" border=0></a></p>
 	
-	</figure>
 
-	<figure class="newsletter">
+	<div class="newsletter"></div>
 		<p>JOIN OUR NEWSLETTER</p>
 	<p>Be the first to receive exciting news, features, and special offers from downunderfitness.com.au</p>
-	
-	</figure>
 	
 	</div>
 
