--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,12 +5,9 @@
 	<title>Down Under Fitness Consultants</title>
 </head>
 <body>
-	<div id="wrapper"
-	>
+<div id="wrapper">
 	<header>
-		img id="logo" src="images/logo.jpg"> alt="logo" title="Down Under Fitness">
-
-
+		<img id="logo" src="images/logo.jpg" alt="logo" title="Down Under Fitness">
 		<nav>
 			<a href="#">MEET THE TEAM</a>
 			<a href="#">SERVICES</a>
@@ -19,43 +16,30 @@
 			<a href="#">TESTIMONIALS</a>
 			<a href="#">EVENTS</a>
 		</nav>
-
-
 	</header>
-
 	<section id="gifts">
-		<p><left>Need Help? Customer Support 1-866-236-8417</left></p>
-		<p><center>Free Gift With Bookings This Week!</center></p>
+		<p>Need Help? Customer Support 1-866-236-8417</p>
+		<p>Free Gift With Bookings This Week!</p>
 	</section>
 
 	<section>
 		<img id="hero" src="images/hero.jpg" alt="About Us" title="Australia's Top Bodybuilding Consultants">
 		<p>There are three natural bodybuilding federations in Australia: ANB, INBA and WNBF. In each case the ‘N’ in their name stands for 'Natural', and they aim to run drug free bodybuilding competitions.  We are your prime online and face-to-face coaching service for both male and females in all weight classes.</p>
 	</section>
-
-		<hr>
-
-	<section id="process">
-
-		<center>
-		<h2 class="subheaders">Our Pre Show Body Revot Process:</h2>
-		<ul id="4points">
-		<button class="button">Sign Up</button>
-		<button class="button">Goals</button>
-		<button class="button">Customise</button>
-		<button class="button">Check In</button>
-
-		</center>
-
-	</section>
-
-
 	<hr>
-		<h2 class="subheaders">Our Services:</h2>
-
+	<section id="process">
+		<h2 class="subheaders">Our Pre Show Body Revot Process:</h2>
+		<div id="4points">
+			<a href="#" class="button">Sign Up</a>
+			<a href="#" class="button">Goals</a>
+			<button class="button">Customise</button>
+			<button class="button">Check In</button>
+		</div>
+	</section>
+	<hr>
 	<section id="services">
+		<h2 class="subheaders">Our Services:</h2>
 		<img src="images/services.jpg "width="600" height="290">
-
 		<ul>
 			<li>Online Training plans, Nutritional plans and Supplement guides all customized and tailor made to your individual 	backgrounds and desired goals</li>
 			<li>12 week Online “Body Revolt” packages</li>
@@ -66,69 +50,45 @@
 			<li>Couples Fitness Training and Couples Personal Training</li>
 		</ul>	
 	</section>
-
-	<hr>
-
-		<h2 class="subheaders">On Site Events:</h2>
+	<hr>	
 	<section id="events">
+		<h2 class="subheaders">On Site Events:</h2>
 		<img src="images/events.jpg "width="600" height="290">
-
 		<ul>
-		<li>This full day group training experience will provide you with new training techniques for each major muscle group.</li>
-		<li>Group numbers are limited in size to 12 participants maximum with myself and one other trainer for the group.  Each participant will get to train 2-3 sessions through the day and watch the other participants perform the other sessions.</li>
+			<li>This full day group training experience will provide you with new training techniques for each major muscle group.</li>
+			<li>Group numbers are limited in size to 12 participants maximum with myself and one other trainer for the group.  Each participant will get to train 2-3 sessions through the day and watch the other participants perform the other sessions.</li>
 		</ul>
-
-		<p><center>For more information regarding your program, please contact:<br>
-		<a href="dufc@live.com.au"><font color=red>dufc@live.com.au</a></font></center></p>
-
+		<p>For more information regarding your program, please contact:<br>
+		<a href="dufc@live.com.au">dufc@live.com.au</a></p>
 	</section>
-
 	<hr>
-
 	<section id="video">
-	<center>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/hjBdB9-QN1k?list=PLzpsKVGHWYMH43erqMMtRmzs0x4J-nv3x" frameborder="0" allowfullscreen></iframe>
-	</center>
 	</section>
-
-
-
 	<hr>
-<footer>
-<!--Footerline-->
-	<div class="help"></div>
-
-		<p>NEED HELP?</p>
-		<ul>
-	<p>Help Center</p>
-	<p>Email Support</p>
-	<p>Live Chat</p>
-	<p>Gift Certificates</p>
-	<p>Send Us Feedback</p>
-		</ul>
-
-
-	<div class="social"></div>
-
-		<p>CONNECT WITH US</p>
-	<p><a target="_blank" title="find us on Facebook" href="http://www.facebook.com/PLACEHOLDER"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_40x40.png" border=0></a></p>
-	<p><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_40x40.png" border=0></a></p>
-	
-
-	<div class="newsletter"></div>
-		<p>JOIN OUR NEWSLETTER</p>
-	<p>Be the first to receive exciting news, features, and special offers from downunderfitness.com.au</p>
-	
-	</div>
-
-	<center>
-		<p><a href="#top">Go to top</a></p>
-	</center>
-	
-</footer>
-	
-	</div>
-
+	<footer>
+	<!--Footerline-->
+		<div class="help">
+			<h3>NEED HELP?</h3>
+			<ul>
+				<p>Help Center</p>
+				<p>Email Support</p>
+				<p>Live Chat</p>
+				<p>Gift Certificates</p>
+				<p>Send Us Feedback</p>
+			</ul>
+		</div>
+		<div class="social">
+			<h3>CONNECT WITH US</h3>
+			<a target="_blank" title="find us on Facebook" href="http://www.facebook.com/PLACEHOLDER"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_40x40.png" border=0></a>
+			<a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_40x40.png" border=0></a>
+		</div>
+		<div class="newsletter">
+			<h3>JOIN OUR NEWSLETTER</h3>
+			<p>Be the first to receive exciting news, features, and special offers from downunderfitness.com.au</p>
+		</div>
+		<a href="#top">Go to top</a>
+	</footer>
+</div>
 </body>
-
 </html>
