--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -8,7 +8,8 @@
 	<div id="wrapper"
 	>
 	<header>
-		img id="logo" src="images/logo.jpg"> alt="logo" title="Down Under Fitness">
+
+		<img src="images/logo.jpg" alt="logo" title="logo" height="150" width="150">
 
 
 		<nav>
@@ -24,9 +25,10 @@
 	</header>
 
 	<section id="gifts">
-		<p style='text-align: left'>"Need Help?"</span>"Customer Support 1-866-236-8417"</p>
-		<span style="float:right;"Free Gift With Bookings This Week!"</p>
 
+		<span style="float: left;">Customer Support 1-866-236-8417</span> 
+     	<span style="float: right;">Free Gift With Bookings This Week!</span>
+	
 	</section>
 
 	<section id="intro">
@@ -37,7 +39,6 @@
 		<hr>
 
 	<section id="process">
-
 		<center>
 		<h2 class="subheaders">Our Pre Show Body Revot Process:</h2>
 		<ul id="4points">
@@ -52,12 +53,14 @@
 
 
 	<hr>
-		<h2 class="subheaders">Our Services:</h2>
 
-	<section id="services">
-		<img src="images/services.jpg "width="600" height="290">
+	<main class="clearfix">
+	<section class="services">
+		<div class="wrapper clearfix">
+			<img src="images/services.jpg" alt="services">
+			<h2>Our Services</h2>
 
-		<ul>
+			<ul>
 			<li>Online Training plans, Nutritional plans and Supplement guides all customized and tailor made to your individual 	backgrounds and desired goals</li>
 			<li>12 week Online “Body Revolt” packages</li>
 			<li>Full day Muscle Training Camps with small numbers of people in a group training environment</li>
@@ -65,22 +68,23 @@
 			<li>Posing for Bodybuilding shows and Fitness Model Posing</li>
 			<li>One on one Personal Training sessions</li>
 			<li>Couples Fitness Training and Couples Personal Training</li>
-		</ul>	
+			</ul>	
+
 	</section>
+		</div>
+	</main>
 
-	<hr>
-
-		<h2 class="subheaders">On Site Events:</h2>
-	<section id="events">
-		<img src="images/events.jpg "width="600" height="290">
+	<section class="services">
+		<img src="images/events.jpg" alt="events">
+		<h2>On Site Events</h2>
 
 		<ul>
 		<li>This full day group training experience will provide you with new training techniques for each major muscle group.</li>
 		<li>Group numbers are limited in size to 12 participants maximum with myself and one other trainer for the group.  Each participant will get to train 2-3 sessions through the day and watch the other participants perform the other sessions.</li>
 		</ul>
 
-		<p><center>For more information regarding your program, please contact:<br>
-		<a href="dufc@live.com.au"><font color=red>dufc@live.com.au</a></font></center></p>
+		<p>For more information regarding your program, please contact:<br>
+		<a href="dufc@live.com.au"><font color=red>dufc@live.com.au</a></font></p>
 
 	</section>
 
@@ -99,30 +103,32 @@
 <!--Footerline-->
 	<div>
 
-	<figure class="help">
+	<figure class id="footer">
 
-		<p>NEED HELP?</p>
+		<h3>NEED HELP?</h3>
 		<ul>
-	<p>Help Center</p>
-	<p>Email Support</p>
-	<p>Live Chat</p>
-	<p>Gift Certificates</p>
-	<p>Send Us Feedback</p>
+	<li>Help Center</li>
+	<li>Email Support</li>
+	<li>Live Chat</li>
+	<li>Gift Certificates</li>
+	<li>Send Us Feedback</li>
 		</ul>
 
-		</figure>
+	</figure>
 
 
-	<figure class="social">
 
-		<p>CONNECT WITH US</p>
+	<figure class id="footer">
+
+		<h3>CONNECT WITH US</h3>
 	<p><a target="_blank" title="find us on Facebook" href="http://www.facebook.com/PLACEHOLDER"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_40x40.png" border=0></a></p>
 	<p><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_40x40.png" border=0></a></p>
 	
 	</figure>
 
-	<figure class="newsletter">
-		<p>JOIN OUR NEWSLETTER</p>
+
+	<figure class id="footer">
+		<h3>JOIN OUR NEWSLETTER</h3>
 	<p>Be the first to receive exciting news, features, and special offers from downunderfitness.com.au</p>
 	
 	</figure>
