--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -5,11 +5,13 @@
 	<title>Down Under Fitness Consultants</title>
 </head>
 <body>
-	
+	<div id="wrapper"
+	>
 	<header>
-			<div classs="site-header_wrapper"...</div>
-			<input type="text" name="search" placeholder="Search..">
-			
+
+		<img src="images/logo.jpg" alt="logo" title="logo" height="150" width="150">
+
+
 		<nav>
 			<a href="#">MEET THE TEAM</a>
 			<a href="#">SERVICES</a>
@@ -52,7 +54,9 @@
 
 	<hr>
 
+	<main class="clearfix">
 	<section class="services">
+		<div class="wrapper clearfix">
 			<img src="images/services.jpg" alt="services">
 			<h2>Our Services</h2>
 
@@ -97,8 +101,9 @@
 	<hr>
 <footer>
 <!--Footerline-->
+	<div>
 
-	<div class="content" id="left"></div>
+	<figure class id="footer">
 
 		<h3>NEED HELP?</h3>
 		<ul>
@@ -109,16 +114,34 @@
 	<li>Send Us Feedback</li>
 		</ul>
 
-	</div>
+	</figure>
 
-	<div class="content" id="right">
+
+
+	<figure class id="footer">
 
 		<h3>CONNECT WITH US</h3>
 	<p><a target="_blank" title="find us on Facebook" href="http://www.facebook.com/PLACEHOLDER"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_40x40.png" border=0></a></p>
 	<p><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_40x40.png" border=0></a></p>
 	
+	</figure>
+
+
+	<figure class id="footer">
+		<h3>JOIN OUR NEWSLETTER</h3>
+	<p>Be the first to receive exciting news, features, and special offers from downunderfitness.com.au</p>
+	
+	</figure>
+	
 	</div>
 
+	<center>
+		<p><a href="#top">Go to top</a></p>
+	</center>
+	
+</footer>
+	
+	</div>
 
 </body>
 
