--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -7,8 +7,6 @@
 <body>
 	
 	<header>
-			<div classs="site-header_wrapper"...</div>
-			<input type="text" name="search" placeholder="Search..">
 			
 		<nav>
 			<a href="#">MEET THE TEAM</a>
@@ -22,12 +20,13 @@
 
 	</header>
 
-	<section id="gifts">
+	<hr>
 
-		<span style="float: left;">Customer Support 1-866-236-8417</span> 
-     	<span style="float: right;">Free Gift With Bookings This Week!</span>
+		<div id="gifts">
+  	<p class="alignleft">Customer Support 1-866-236-8417</p>
+  	<p class="alignright">Free Gift With Bookings This Week</p>
+		</div>
 	
-	</section>
 
 	<section id="intro">
 		<img id="hero" src="images/hero.jpg" alt="About Us" title="Australia's Top Bodybuilding Consultants">
